--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-31  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/stlinkv2.py: Support ST-Link/V2-1.
+
 2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/stlinkv2.py: Fix for Python3.  Thanks to Bertrand Jacquin.
