--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-08-04  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/adc_stm32f103.c: Update from NeuG 1.0.3.
+
+	* chopstx: Update to 0.08.
+	* src/sys.h: Update.
+
 2015-08-03  Niibe Yutaka  <gniibe@fsij.org>
 
 	* test/features/steps.py (set_msg): Python3 fix.
