--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-08-05  Niibe Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.1.7.
+
 2015-08-04  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/adc_stm32f103.c: Update from NeuG 1.0.3.
