--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-08-12  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp-do.c (gpg_do_write_prvkey): Fix call to modulus_free.
+
 2015-08-06  Mateusz Zalega <mateusz@nitrokey.com>
 
 	* boards/NITROKEY_LITE/*: New.
