--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-08-26  Mateusz Zalega  <mateusz@nitrokey.com>
+
+	* GNUK_USB_DEVICE_ID: Add Nitrokey Start.
+
 2015-08-05  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.1.7.
