--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,18 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 1.1.8
+
+  Released 2015-09-??, by NIIBE Yutaka
+
+** Upgrade of Chopstx
+We use Chopstx 0.09, which supports Nitroky-Start.
+
+** Card serial number
+The way to determine a serial number of Gnuk Token for card has been
+changed.  It uses the 96-bit unique bits of MCU, but the portion for
+use is changed.
+
+
 * Major changes in Gnuk 1.1.7
 
   Released 2015-08-05, by NIIBE Yutaka
