allow cancelling execution of commands which take long time

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2015-09-09  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/openpgp.c (process_command_apdu): Protect command execution
+	against cancelling the execution thread.
+	(cmd_pso, cmd_internal_authenticate): Allow cancellation.
+	* src/openpgp-do.c (gpg_do_keygen): Allow cancellation.
+
 	* src/main.c (main): Handle LED_USB_RESET.
 
 	* src/usb-icc.c (ccid_usb_reset): New.
