--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2015-09-10  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/call-rsa.c (rsa_cleanup): New.
-	(rsa_sign, rsa_decrypt, rsa_genkey): Alloc cancellation.
+	(rsa_sign, rsa_decrypt, rsa_genkey): Allow cancellation.
 	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Cancellation
 	is handled by each functions in case of RSA.
 
