--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Gnuk NEWS - User visible changes
 
 * Major changes in Gnuk 1.1.8
 
-  Released 2015-09-??, by NIIBE Yutaka
+  Released 2015-09-17, by NIIBE Yutaka
 
 ** Upgrade of Chopstx
 We use Chopstx 0.10, which supports Nitrokey-Start.
@@ -11,6 +11,11 @@ We use Chopstx 0.10, which supports Nitrokey-Start.
 The way to determine a serial number of Gnuk Token for card has been
 changed.  It uses the 96-bit unique bits of MCU, but the portion for
 use is changed.
+
+** USB Reset handling
+USB reset lets Gnuk Token restart.  It would not be perfect, when it's
+during computation of some function, but most parts are protected by
+Chopstx's feature of cancellation.
 
 
 * Major changes in Gnuk 1.1.7
