--- a/THANKS
+++ b/THANKS
@@ -14,6 +14,7 @@ Andre Zepezauer		andre.zepezauer@student.uni-halle.de
 Bertrand Jacquin	bertrand@jacquin.bzh
 Clint Adams		clint@softwarefreedom.org
 Daniel Kahn Gillmor	dkg@fifthhorseman.net
+Elliott Mitchell
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
 Jonathan McDowell	noodles@earth.li
