--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-05-16  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update.
+	* src/sys.c: Update from Chopstx.
+
 2016-05-13  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/neug.c (rng): Call chopstx_claim_irq before adc_start.
@@ -5,7 +10,7 @@
 
 2016-05-12  Niibe Yutaka  <gniibe@fsij.org>
 
-	* chopstx: Update
+	* chopstx: Update.
 	* src/sys.c: Update from Chopstx.
 	* src/usb_lld.h: Likewise.
 	* src/usb_stm32f103.c: Likewise.
