--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-05-20  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* VERSION: 1.2.0.
+	* src/usb-ccid.c (ccid_thread): Fix timeout.
+	(icc_handle_timeout, icc_send_status): Tweak.
+
 2016-05-19  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/usb_ctrl.c (usb_cb_ctrl_write_finish): Set bDeviceState.
@@ -8,9 +14,6 @@
 	* src/Makefile.in (CSRC): Follow the change.
 
 	* chopstx: Update to 0.11.
-
-	* src/gnuk.h (LED_START_COMMAND, LED_FINISH_COMMAND): Change the
-	values for a case both flags will be handled.
 
 2016-05-18  Niibe Yutaka  <gniibe@fsij.org>
 
