--- a/NEWS
+++ b/NEWS
@@ -2,15 +2,18 @@ Gnuk NEWS - User visible changes
 
 * Major changes in Gnuk 1.2.0
 
-  Released 2016-02-xx, by NIIBE Yutaka
+  Released 2016-05-20, by NIIBE Yutaka
+
+** Upgrade of Chopstx
+We use Chopstx 0.11.
 
 ** Support authentication status reset by VERIFY command.
 This feature is described in the OpenPGPcard specification V2.2 and
 V3.1, which allow user to reset authentication status.
 
-** S2K algorithm change to defeat "copycat" service of MCU.
+** S2K algorithm tweak to defeat "copycat" service of MCU.
 Even if the existence of some services copying MCU, your private key
-will not be controled by others.
+will not be controled by others, in some cases.
 
 ** Bug fix for secp256k1 and NIST P-256.
 Bugs in basic computation were fixed.
