--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-05-21  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/main.c (led_blink, main): Fix LED blink protocol.
+
 2016-05-20  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.0.
