--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/usb-ccid.c (ccid_thread): Handle RESET->CONFIGURE process
+	correctly.
+
+	* polarssl/library/aes.c (FT0, FT1, FT2): Add "weak" flag.
+
+	* src/neug.c: Update from NeuG.
+
+	* src/usb_desc.c (usb_cb_get_descriptor): Only valid if USE_SYS3.
+
+	* src/Makefile.in (USE_SYS, USE_USB, USE_ADC): Enabled.
+	(CHIP): Add.
+
+	* src/sys.c, src/sys.h: Remove.
+	* src/usb_stm32f103.c, src/usb_lld.h: Remove.
+	* src/adc_stm32f103.c, src/adc.h: Remove.
+
+	* chopstx: Update to 0.12.
+
 2016-05-21  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/main.c (led_blink, main): Fix LED blink protocol.
