--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-06-02  Niibe Yutaka  <gniibe@fsij.org>
+
+	* regnual/regnual.c (usb_cb_tx_done): Follow the change of USB
+	API.
+
+	* regnual/reset.c: Rename from sys.c.
+
 2016-06-01  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/stlinkv2.py (stlinkv2.__init__): Don't
