--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-06-17  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update to 1.0.
+
 2016-06-15  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.ld.in (__process2_stack_size__): Update
