--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-06-21  Niibe Yutaka  <gniibe@fsij.org>
+
+	* doc/index.rst: Update documentation by an example
+	Ed25519/cv25519.
+
 2016-06-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx: Update to 1.0.
