--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-07-09  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (openpgp_card_thread): Don't need to get SELF.
+
 2016-07-06  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/pin-cir.c (cir_getchar): Use chopstx_poll.
