--- a/THANKS
+++ b/THANKS
@@ -19,6 +19,7 @@ Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
 Jonathan McDowell	noodles@earth.li
 Kaz Kojima		kkojima@rr.iij4u.or.jp
+Kenji Rikitake
 Ludovic Rousseau	ludovic.rousseau@free.fr
 Luis Felipe R. Murillo	luisfelipe@ucla.edu
 Mateusz Zalega		mateusz@nitrokey.com
