--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-08-03  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/hub_ctrl.py: Port to Python 3.
+
 2016-07-11  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.2.1.
