--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-09-02  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/configure (REVISION): Fix the detection of .git.
+	It may be a regular file (if it's created by worktree).
+
 2016-08-24  Niibe Yutaka  <gniibe@fsij.org>
 
 	* test/features/steps.py (ini): Use GLC (the global context),
